[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Daniil <dadyarri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
tortoise-orm = "^0.17.8"
aerich = "^0.6.0"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]


[tool.aerich]
tortoise_orm = "database.core.CONFIG"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
